--- a/sockshop_modified_full_cluster_with_det.yaml
+++ b/sockshop_modified_full_cluster_with_det.yaml
@@ -5,7 +5,7 @@ metadata:
   name: orders-db
   labels:
     name: orders-db
-  namespace: sock-shop
+  namespace: sock-shop-det
 spec:
   replicas: 1
   selector:
@@ -22,6 +22,8 @@ spec:
           ports:
             - name: mongo
               containerPort: 27017
+            - name: det
+              containerPort: 27018
           securityContext:
             capabilities:
               drop:
@@ -47,7 +49,7 @@ metadata:
   name: orders-db
   labels:
     name: orders-db
-  namespace: sock-shop
+  namespace: sock-shop-det
 spec:
   ports:
     # the port that this service should serve on
@@ -59,9 +61,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: carts-db-det
+  name: orders-db-det
   labels:
-    name: carts-db-det
+    name: orders-db-det
   namespace: sock-shop-det
 spec:
   ports:
