--- a/sockshop_modified_full_cluster_with_det.yaml
+++ b/sockshop_modified_full_cluster_with_det.yaml
@@ -73,3 +73,60 @@ spec:
   selector:
       name: user-db
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: user-db-2
+  labels:
+    name: user-db-2
+  namespace: sock-shop-det
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      name: user-db-2
+  template:
+    metadata:
+      labels:
+        name: user-db-2
+    spec:
+      containers:
+        - name: user-db-2
+          image: weaveworksdemos/user-db:0.3.0
+          ports:
+            - name: mongo
+              containerPort: 27017
+          securityContext:
+            capabilities:
+              drop:
+                - all
+              add:
+                - CHOWN
+                - SETGID
+                - SETUID
+            readOnlyRootFilesystem: false
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp-volume
+      volumes:
+        - name: tmp-volume
+          emptyDir:
+            medium: Memory
+      nodeSelector:
+        beta.kubernetes.io/os: linux
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: user-db-2
+  labels:
+    name: user-db-2
+  namespace: sock-shop-det
+spec:
+  ports:
+    # the port that this service should serve on
+    - port: 27017
+      targetPort: 27017
+  selector:
+    name: user-db-2
+---
